--- a/TM.RestHour/Views/CrewHealth/DailyTemperatureReading.cshtml
+++ b/TM.RestHour/Views/CrewHealth/DailyTemperatureReading.cshtml
@@ -188,6 +188,37 @@
 
                     </div>
 
+
+
+
+
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Place</label>
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <input type="text" class="form-control" id="Place" placeholder="Place" />
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Means</label>
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <select name="temperature" class="form-control m-b" style="width:100%" id="ddlMeans">
+                                    <option value="">Select</option>
+                                    <option value="Thermometer Hg">Thermometer Hg</option>
+                                    <option value="Infrared Temperature Gun">Infrared Temperature Gun</option>
+                                    <option value="Sensor">Sensor</option>
+                                    <option value="Thermometer Digital">Thermometer Digital</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Remarks</label>
 
