--- a/TM.RestHour/Views/CrewHealth/ReportDailyTemperature.cshtml
+++ b/TM.RestHour/Views/CrewHealth/ReportDailyTemperature.cshtml
@@ -79,12 +79,15 @@
                         <table id="certtableReport2" class="display" cellspacing="0" width="100%">
                             <thead>
                                 <tr>
-                                    <th>Temperature</th>
-
                                     <th>Reading Date</th>
                                     <th>Reading Time</th>
+                                    <th>Full Name</th>
+                                    <th>Rank</th>
+                                    <th>Place</th>
+                                    <th>Temperature Mode</th>
+                                    <th>Body Temperature (NORMAL : 36.0 – 37.5 C)</th>
                                     <th>Unit</th>
-                                    <th>Mode</th>
+                                    <th>TEMPERATURE TAKEN THROUGH</th>
                                 </tr>
                             </thead>
                         </table>
@@ -104,12 +107,15 @@
         <table id="certtable_print22" class="display" cellspacing="0" width="100%">
             <thead align="center">
                 <tr>
-                    <th>Temperature</th>
-
                     <th>Reading Date</th>
                     <th>Reading Time</th>
+                    <th>Full Name</th>
+                    <th>Rank</th>
+                    <th>Place</th>
+                    <th>Temperature Mode</th>
+                    <th>Body Temperature (NORMAL : 36.0 – 37.5 C)</th>
                     <th>Unit</th>
-                    <th>Mode</th>
+                    <th>TEMPERATURE TAKEN THROUGH</th>
                 </tr>
             </thead>
             <tbody align="center">
