--- a/TM.RestHour/Views/CrewList/CrewList.cshtml
+++ b/TM.RestHour/Views/CrewList/CrewList.cshtml
@@ -62,13 +62,44 @@
                         <table id="jqGrid"></table>
                         <div id="jqControls"></div>
                     </div>*@
-              
+
 
 
             </div>
         </div>
     </div>
 </body>
+
+
+
+
+<link href="~/bootstrap-5.0.0-beta1-dist/css/bootstrap-grid.css" rel="stylesheet" />
+<link href="~/bootstrap-5.0.0-beta1-dist/css/bootstrap-grid.min.css" rel="stylesheet" />
+<link href="~/bootstrap-5.0.0-beta1-dist/css/bootstrap-grid.rtl.css" rel="stylesheet" />
+<link href="~/bootstrap-5.0.0-beta1-dist/css/bootstrap-grid.rtl.min.css" rel="stylesheet" />
+<link href="~/bootstrap-5.0.0-beta1-dist/css/bootstrap-reboot.css" rel="stylesheet" />
+<link href="~/bootstrap-5.0.0-beta1-dist/css/bootstrap-reboot.min.css" rel="stylesheet" />
+<link href="~/bootstrap-5.0.0-beta1-dist/css/bootstrap-reboot.rtl.css" rel="stylesheet" />
+<link href="~/bootstrap-5.0.0-beta1-dist/css/bootstrap-reboot.rtl.min.css" rel="stylesheet" />
+<link href="~/bootstrap-5.0.0-beta1-dist/css/bootstrap-utilities.css" rel="stylesheet" />
+<link href="~/bootstrap-5.0.0-beta1-dist/css/bootstrap-utilities.min.css" rel="stylesheet" />
+<link href="~/bootstrap-5.0.0-beta1-dist/css/bootstrap-utilities.rtl.css" rel="stylesheet" />
+<link href="~/bootstrap-5.0.0-beta1-dist/css/bootstrap-utilities.rtl.min.css" rel="stylesheet" />
+<link href="~/bootstrap-5.0.0-beta1-dist/css/bootstrap.css" rel="stylesheet" />
+<link href="~/bootstrap-5.0.0-beta1-dist/css/bootstrap.min.css" rel="stylesheet" />
+<link href="~/bootstrap-5.0.0-beta1-dist/css/bootstrap.rtl.min.css" rel="stylesheet" />
+<link href="~/bootstrap-5.0.0-beta1-dist/css/bootstrap.rtl.css" rel="stylesheet" />
+
+<script src="~/bootstrap-5.0.0-beta1-dist/js/bootstrap.bundle.js"></script>
+<script src="~/bootstrap-5.0.0-beta1-dist/js/bootstrap.bundle.min.js"></script>
+<script src="~/bootstrap-5.0.0-beta1-dist/js/bootstrap.esm.js"></script>
+<script src="~/bootstrap-5.0.0-beta1-dist/js/bootstrap.esm.min.js"></script>
+<script src="~/bootstrap-5.0.0-beta1-dist/js/bootstrap.js"></script>
+<script src="~/bootstrap-5.0.0-beta1-dist/js/bootstrap.min.js"></script>
+
+
+
+
 
 @section Scripts
 {
@@ -82,7 +113,7 @@
     <script src="~/Scripts/CrewListing.js"></script>
 
     <script src="~/Scripts/DataTables/dataTables.select.min.js"></script>
-        <script src="~/Scripts/DataTables/dataTables.rowReorder.min.js"></script>
+    <script src="~/Scripts/DataTables/dataTables.rowReorder.min.js"></script>
 
     <script type="text/javascript">
         $(document).ready(function () {
