--- a/TM.RestHour/Views/About/Index.cshtml
+++ b/TM.RestHour/Views/About/Index.cshtml
@@ -8,7 +8,10 @@
     <div class="row">
         <div class="col-md-4"><h1 class="ta">About</h1></div>
         <div class="col-md-8 backtt">
-            <img src="~/background/TechInnologyLogo.png" style="width:40%; text-align:center;"/>
+            <img src="~/background/TechInnologyLogo.png" style="width:40%; text-align:center;" />
+
+            <div>&nbsp;</div>
+
             <p class="ab">
                 Tech-Innology, an emerging Marine IT Support Firm, was established in July 2014 on an extremely strong technical foundation and also marine overview. The organization is headquartered in Singapore, a hub of marine activity. With the commitment to provide our customers with the best of IT services and solutions in marine domain, Tech-innology offers one stop solution for a wide range of IT requirements. Our services include network design, onboard network, hardware/software installation, data base build-up, data analysis and customised software.
 
