--- a/TM.RestHour/Views/CrewHealth/PatientDetails.cshtml
+++ b/TM.RestHour/Views/CrewHealth/PatientDetails.cshtml
@@ -136,7 +136,7 @@
                     </div>
                     <div class="form-group">
                         <label for=" JoiningDate">Joining Date </label>
-                        <input type="text" class="form-control" id="JoiningDate" placeholder="JoiningDate " maxlength="4" size="4" />
+                        <input type="text" class="form-control" id="JoiningDate" placeholder="JoiningDate " disabled />
                     </div>
                 </div>
 
@@ -598,7 +598,7 @@
             $('#FrequencyOfFits').show();
         });
 
-
+      
         $("#JoiningDate").datepicker({
 
             changeMonth: true,
@@ -606,7 +606,7 @@
             dateFormat: 'd-M-yy',
 
         });
-
+       
         $("#SymptomatologyDate").datepicker({
 
             changeMonth: true,
