--- a/TM.RestHour/Views/CrewHealth/UploadJoiningMedical.cshtml
+++ b/TM.RestHour/Views/CrewHealth/UploadJoiningMedical.cshtml
@@ -59,7 +59,7 @@
                             </div>
                             @*<button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("PatientDetails", "CrewHealth")';return false;">Back To Patient Details Page</button>*@
                            
-                            @*<button type="button" class="btn btn-primary" style="width:86px; background-color:crimson; color:aliceblue" onclick="window.close();">Close</button>*@
+                            <button type="button" class="btn btn-primary" style="width:86px; background-color:crimson; color:aliceblue" onclick="window.close();">Close</button>
 
                         }
 
