--- a/TM.RestHour/Views/AddCrew/AddEditCrew.cshtml
+++ b/TM.RestHour/Views/AddCrew/AddEditCrew.cshtml
@@ -184,7 +184,7 @@
 
         <div class="col-sm-2">
             <div class="form-group" style="margin-bottom: 18px;">
-                <button type="button" class="button1" id="btnAdd" onclick="return AddCrew();" style="width:130px; float: right;">Add / Update Crew</button>
+                <button type="button" class="button1" id="btnAdd" onclick="return AddCrew();" style="width:190px;">Add / Update Crew</button>
             </div>
             <div>&nbsp;</div>
         </div>
