--- a/TM.RestHour/Views/TimeSheet/CrewTimeSheet.cshtml
+++ b/TM.RestHour/Views/TimeSheet/CrewTimeSheet.cshtml
@@ -16,6 +16,13 @@
 		color: #000 !important;
 		border-color: green !important;
 	}
+    .bacb {
+        padding: 30px 18px !important;
+        overflow-y: scroll;
+    }
+    textarea.form-control {
+        height: 69px;
+    }
 </style>
 
 <link href="~/Content/jquery-ui.min.css" rel="stylesheet" />
