--- a/TM.RestHour/Views/Plans/Index.cshtml
+++ b/TM.RestHour/Views/Plans/Index.cshtml
@@ -2,7 +2,15 @@
 @{
     ViewBag.Title = "Index";
 }
+<style>
+    .buttonpop {
+        margin:20px 0;
+    }
 
+    .backtt {
+        text-align:right;
+    }
+</style>
 <body>
     <div class="">
         <div class="head_title">
@@ -11,10 +19,10 @@
        
         <div class="card backtt">
             <div class="">
-                <embed src="../COVIDPLAN.pdf" width="800px;" height="345px;" />
+                <embed src="../COVIDPLAN.pdf" width="100%" height="345px;" />
 
             </div>
-            <button type="button" class="buttonpop" id="" style="float: right; width: 100px;">Update</button>
+            <button type="button" class="buttonpop" id="" style="width: 100px;">Update</button>
         </div>
 
     </div>
