--- a/TM.RestHour/Views/CreateNewUserAccount/Index.cshtml
+++ b/TM.RestHour/Views/CreateNewUserAccount/Index.cshtml
@@ -33,7 +33,7 @@
 @Html.Hidden("validateusername", @Url.Action("CheckUserNameValididty", "CreateNewUserAccount"))
 @Html.Hidden("getCrewName", @Url.Action("GetCrewByID", "CreateNewUserAccount"))
 
-<body style="background-image: url(../background/password.jpg);
+<body style="/*background-image: url(../background/password.jpg);*/
     background-size: cover;">
 
     <div class="row">
